@@ -1,22 +1,31 @@
 {% extends "base.html" %}
-{% load i18n sekizai_tags multilingual_events_tags %}
-{% load cms_tags %}
-{% load url from future %}
+{% load i18n %}
+
+{% block title %}{% trans "Events" %}{% endblock %}
 
 {% block main %}
-<h1>{% trans "Events" %}</h1>
-
-<h2>{% trans "Upcoming" %}</h2>
-{% for event in upcoming_events %}
-    {% include "multilingual_events/partials/event_item.html" %}
-{% empty %}
-	<p>{% trans "No upcoming events found." %}</p>
-{% endfor %}
-
-<h2>{% trans "Archived" %}</h2>
-{% for event in archived_events %}
-    {% include "multilingual_events/partials/event_item.html" %}
-{% empty %}
-	<p>{% trans "No archived events found." %}</p>
-{% endfor %}
+<div class="row">
+	<div class="col-md-6">
+		<h1>{% trans "Upcoming events" %}</h1>
+	</div>
+	<div class="col-md-6">
+		<h2>{% trans "Past events" %}</h2>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-6">
+		{% for event in upcoming_events %}
+			{% include "multilingual_events/partials/event_item.html" with is_last=forloop.last %}
+		{% empty %}
+			<p>{% trans "No upcoming events found." %}</p>
+		{% endfor %}
+	</div>
+	<div class="col-md-6">
+		{% for event in archived_events %}
+			{% include "multilingual_events/partials/event_item.html" with is_last=forloop.last %}
+		{% empty %}
+			<p>{% trans "No past events found." %}</p>
+		{% endfor %}
+	</div>
+</div>
 {% endblock %}
