@@ -1,13 +1,18 @@
-{% load i18n multilingual_events_tags %}
-{% load url from future %}
-
-<p>{{ event.category.slug }}</p>
-<p>
-    <span>{{ event.start_date|date:"F d, Y" }}</span> /
-    <span>{{ event.category.get_translation.title }}</span>
-</p>
-
-<h3><a href="{{ event.get_absolute_url }}">{{ event.title }}</a></h3>
-<p>{{ event.description }}</p>
-<p><a href="{{ event.get_absolute_url }}">{% trans "Read more …"%}</a></p>
-<hr>
+{% load thumbnail %}
+<div class="row">
+    <div class="col-md-3">
+        <a href="{{ event.get_absolute_url }}">
+            {% if event.image %}
+                <img src="{% thumbnail event.image 130x130 crop %}" alt="{{ event.image.original_filename }}">
+            {% endif %}
+        </a>
+    </div>
+    <div class="col-md-9">
+        <small><em>{{ event.start_date|date:"DATE_FORMAT" }}{% if event.end_date %} - {{ event.end_date|date:"DATE_FORMAT" }}{% endif %}</em></small>
+        <h4><a href="{{ event.get_absolute_url }}">{{ event.title }}</a></h4>
+        <p>{{ event.description|truncatewords:20 }}</p>
+    </div>
+</div>
+{% if not is_last %}
+    <hr />
+{% endif %}
